# timeDebuger

./: CMakeLists.txt
src/: main.cpp
src/asmTableWidget/: asmTableWidget.cpp  asmTableWidget.h
src/registerTableWidget/: registerTableWidget.cpp  registerTableWidget.h
ui/: DebugAssembly.ui  DebugRegister.ui  mainWindow.ui
